# Corewar

./: .gitignore  CMakeLists.txt  Makefile  change_branch  makefile
asm/: .cor  .s  Bat.s  CHMP  CMakeLists.txt  Car.cor  Car.s  Car2.cor  Car2.s  Makefile  TODO  all_maps.sh  asm  diff.sh  testik
asm/asm_good/: Car.s
asm/asm_our/: 42.cor
asm/includes/: asm.h  asm2.h  error.h  op.h
asm/libft/: Makefile
asm/srcs/: ToDoList  ToDoList.md  check.c  check_data.c  check_functions.c  check_label.c  cor_file.c  count_size.c  empty_now.c  emty_now.c  error.c  free_functions.c  ft_parse_body.c  ft_strmultsplit.c  ft_strsplit.c  init.c  init_structs.c  main.c  op.c  parse.c  parse_args.c  parse_body.c  parse_body_Ann_old.c  parse_body_p.c  parse_champion.c  parse_function.c  parse_header.c  parse_label.c  read_file.c  sort.c  utils.c  utils2.c  valid_args.c  writing_to_file.c  writing_to_file3.c  вопросики))0
asm/srcs/parse/: parse_champion.c
res/: main.c
vm/: .42.cor.swp  .Car.cor.swp  Makefile  TODO  lol  lol1  lol2  makefile  maxidef.cor  maxidef.s  test
vm/include/: op.h  operation.h  parse_args.h  vm.h  vm_error.h
vm/includes/: vm.h
vm/src/: carriage.c  champ.c  game.c  main.c  visual.c  vm.c
vm/src/debug/: debug.c
vm/src/extra/: extra.c
vm/src/logic/: arg.c  calc.c  check.c  exec_oper.c  init.c  op.c  operation.c  validation.c
vm/src/logic/operation/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  op.c  operation.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
vm/src/parse/: parse_args.c  parse_args1.c  parse_args_extra.c  parse_args_flags.c  parse_champion.c  parse_files.c  parse_n.c  parse_n_utils.c
vm/srcs/: init.c  main.c  op.c
vm/srcs/logic/: fighting.c  init.c
vm/srcs/parse/: .Car.cor.swp  parse_champion.c  parse_n.c  parse_n.h
vm/trash_test/: Backward.cor  Backward.s  ex.cor  maxidef.cor
vm/valid/: Car.cor
