cmake_minimum_required(VERSION 3.15)
project(asm C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(asm
        includes/asm.h
        includes/error.h
        includes/op.h
        libft/includes/colors.h
        libft/includes/funfortypes.h
        libft/includes/header_double.h
        libft/includes/libft.h
        libft/includes/libftprintf.h
        libft/includes/unixtime.h
        libft/srcs/ft/free_table.c
        libft/srcs/ft/ft_atoi.c
        libft/srcs/ft/ft_bzero.c
        libft/srcs/ft/ft_isalnum.c
        libft/srcs/ft/ft_isalpha.c
        libft/srcs/ft/ft_isascii.c
        libft/srcs/ft/ft_isdigit.c
        libft/srcs/ft/ft_isprint.c
        libft/srcs/ft/ft_itoa.c
        libft/srcs/ft/ft_itoa_signed.c
        libft/srcs/ft/ft_itoabase.c
        libft/srcs/ft/ft_itoadouble.c
        libft/srcs/ft/ft_itoahex.c
        libft/srcs/ft/ft_lstadd.c
        libft/srcs/ft/ft_lstadd_back.c
        libft/srcs/ft/ft_lstdel.c
        libft/srcs/ft/ft_lstdelone.c
        libft/srcs/ft/ft_lstfind.c
        libft/srcs/ft/ft_lsti.c
        libft/srcs/ft/ft_lstiter.c
        libft/srcs/ft/ft_lstlast.c
        libft/srcs/ft/ft_lstmap.c
        libft/srcs/ft/ft_lstmerge.c
        libft/srcs/ft/ft_lstnew.c
        libft/srcs/ft/ft_lstqsort.c
        libft/srcs/ft/ft_lstremove_if.c
        libft/srcs/ft/ft_lstreverse.c
        libft/srcs/ft/ft_lstsize.c
        libft/srcs/ft/ft_lstswap.c
        libft/srcs/ft/ft_memalloc.c
        libft/srcs/ft/ft_memccpy.c
        libft/srcs/ft/ft_memchr.c
        libft/srcs/ft/ft_memcmp.c
        libft/srcs/ft/ft_memcpy.c
        libft/srcs/ft/ft_memdel.c
        libft/srcs/ft/ft_memmove.c
        libft/srcs/ft/ft_memset.c
        libft/srcs/ft/ft_putchar.c
        libft/srcs/ft/ft_putchar_fd.c
        libft/srcs/ft/ft_putendl.c
        libft/srcs/ft/ft_putendl_fd.c
        libft/srcs/ft/ft_putnbr.c
        libft/srcs/ft/ft_putnbr_fd.c
        libft/srcs/ft/ft_putstr.c
        libft/srcs/ft/ft_putstr_fd.c
        libft/srcs/ft/ft_qsort.c
        libft/srcs/ft/ft_stradd_back.c
        libft/srcs/ft/ft_stradd_front.c
        libft/srcs/ft/ft_strcat.c
        libft/srcs/ft/ft_strcat_front.c
        libft/srcs/ft/ft_strchr.c
        libft/srcs/ft/ft_strclr.c
        libft/srcs/ft/ft_strcmp.c
        libft/srcs/ft/ft_strcpy.c
        libft/srcs/ft/ft_strcut.c
        libft/srcs/ft/ft_strdel.c
        libft/srcs/ft/ft_strdup.c
        libft/srcs/ft/ft_strequ.c
        libft/srcs/ft/ft_striter.c
        libft/srcs/ft/ft_striteri.c
        libft/srcs/ft/ft_strjoin.c
        libft/srcs/ft/ft_strlcat.c
        libft/srcs/ft/ft_strlen.c
        libft/srcs/ft/ft_strmap.c
        libft/srcs/ft/ft_strmapi.c
        libft/srcs/ft/ft_strncat.c
        libft/srcs/ft/ft_strncmp.c
        libft/srcs/ft/ft_strncpy.c
        libft/srcs/ft/ft_strnequ.c
        libft/srcs/ft/ft_strnew.c
        libft/srcs/ft/ft_strnstr.c
        libft/srcs/ft/ft_strrchr.c
        libft/srcs/ft/ft_strreplace.c
        libft/srcs/ft/ft_strsplit.c
        libft/srcs/ft/ft_strstr.c
        libft/srcs/ft/ft_strsub.c
        libft/srcs/ft/ft_strtrim.c
        libft/srcs/ft/ft_tolower.c
        libft/srcs/ft/ft_toupper.c
        libft/srcs/ft/get_next_line.c
        libft/srcs/ft/new_table.c
        libft/srcs/ft_printf/bonus_star.c
        libft/srcs/ft_printf/flag_hash.c
        libft/srcs/ft_printf/ft_double.c
        libft/srcs/ft_printf/ft_kek.c
        libft/srcs/ft_printf/ft_longarith.c
        libft/srcs/ft_printf/fun_flags.c
        libft/srcs/ft_printf/fun_length.c
        libft/srcs/ft_printf/funtypes_cdx_upx_o.c
        libft/srcs/ft_printf/funtypes_sf_percent.c
        libft/srcs/ft_printf/funtypes_ubp.c
        libft/srcs/ft_printf/get_flag_sign.c
        libft/srcs/ft_printf/length_bonus.c
        libft/srcs/ft_printf/parse.c
        libft/srcs/ft_printf/placeholder.c
        libft/srcs/ft_printf/precision.c
        libft/srcs/ft_printf/printf.c
        libft/srcs/ft_printf/set_precision_width.c
        libft/srcs/ft_printf/type_color.c
        libft/srcs/ft_printf/type_unixtime.c
        libft/srcs/ft_printf/unixtime.c
        srcs/check.c
        srcs/check_data.c
        srcs/check_label.c
        srcs/cor_file.c
        srcs/count_size.c
        srcs/empty_now.c
        srcs/error.c
        srcs/free_functions.c
        srcs/init.c
        srcs/init_structs.c
        srcs/main.c
        srcs/op.c
        srcs/parse.c
        srcs/parse_args.c
        srcs/parse_body.c
        srcs/parse_body_p.c
        srcs/parse_champion.c
        srcs/parse_function.c
        srcs/parse_header.c
        srcs/parse_label.c
        srcs/read_file.c
        srcs/utils.c
        srcs/valid_args.c
        srcs/writing_to_file.c)
